// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics / Component / without selector Simple Component 1`] = `
<storybook-wrapper>
  <ng-component>
    My name in color : 
    <div
      style="color: rgb(30, 136, 229);"
    >
      Joe Bar
    </div>
  </ng-component>
</storybook-wrapper>
`;

exports[`Storyshots Basics / Component / without selector With Injection Token And Args 1`] = `
<storybook-wrapper>
  <ng-component>
    My name in color : 
    <div
      style="color: red;"
    >
      Dixie Normous
    </div>
  </ng-component>
</storybook-wrapper>
`;
